# something-cool

./: Cargo.toml  Dockerfile  config.yml  docker-compose.yaml
migrations/: 20241013171121_create_user.up.sql  20241014153807_create_campaign.up.sql  20241018154807_create_lead.down.sql  20241018154807_create_lead.up.sql  20241026080631_add_email_template.down.sql  20241026080631_add_email_template.up.sql
src/: app.rs  configuration.rs  database.rs  lib.rs  main.rs
src/api/: auth.rs  campaigns.rs  leads.rs  mod.rs
